--- a/markup/components/file/file.styl
+++ b/markup/components/file/file.styl
@@ -11,12 +11,17 @@
         border 1px solid borderColor
         border-right: 0
         background-color #f7f7f7
-        color rgba(darkGreyColor, .59)
-        font-family fontMain
-        font-size 16px
-        font-weight 400
-        line-height: 1.375
-        letter-spacing initial
+        overflow: hidden
+
+        span
+            color rgba(darkGreyColor, .59)
+            font-family fontMain
+            font-size 16px
+            font-weight 400
+            line-height: 1.375
+            letter-spacing initial
+            text-overflow: ellipsis
+            ellipsis(100%)
 
     &__description
         color rgba(darkGreyColor, .59)
@@ -76,6 +81,8 @@
             max-width: 151px
             margin-top: 9px
             flex: 0
+            text-overflow initial
+            white-space initial
 
         & ^[0]__description
             margin-top: auto
