--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -33,8 +33,9 @@ block content
             +demo-link('agency-list.html') 03/List_agency_1
             +demo-link('agency.html') 03/List_agency_(2-3)
             +demo-link('model-map.html') 04/Map_model 0
-            +demo-link('user-settings.html') 06/User/Settings
-            +demo-link('user-settings2.html') 06/User/Settings (2)
+            +demo-link('user-settings.html') 06/Settings
+            +demo-link('user-settings2.html') 06/Settings (2)
+            +demo-link('user-settings-user.html') 06/User/Settings
             +demo-link('user-messages.html') 06/User/Messages (1,2,3)
             +demo-link('user-no-messages.html') 06/User/Message/4
             +demo-link('user-visitors.html') 06/Visitors
