--- a/markup/components/user-nav/user-nav.styl
+++ b/markup/components/user-nav/user-nav.styl
@@ -2,10 +2,18 @@
     display: flex
 
     &__item
+        position: relative
         display: block
         width: 185px
         height: 60px
+        background-color: bgColor
         transition(background-color)
+
+        +below(1024px)
+            padding-left: 15px
+            padding-right: 15px
+            width: 160px
+            flex: 1
 
         &:not(:first-child)
             border-left: 1px solid borderColor
@@ -20,12 +28,13 @@
             &:not(:first-child)
                 border-color: transparent
 
-            + ^[0]__item
+            & + ^[0]__item
                 border-color: transparent
 
     &__link
-        position: relative
         display: flex
+        justify-content: center
+        align-items: center
         width: 100%
         height: 100%
         color darkGreyColor
@@ -36,3 +45,20 @@
         text-transform uppercase
         text-decoration: none
         transition(color)
+
+    &__badge
+        position: absolute
+        top: 0
+        right: 0
+        display: flex
+        align-items: center
+        justify-content: center
+        width 24px
+        height 24px
+        box-shadow 0 4px 8px rgba(210, 163, 111, .3)
+        background-color mainColor
+        color #fff
+        font-size 12px
+        font-weight 700
+        flex-shrink: 0
+        border-radius 0 0 0 4px
