--- a/markup/components/user-settings/user-settings.pug
+++ b/markup/components/user-settings/user-settings.pug
@@ -23,8 +23,8 @@ mixin user-settings()
                             +field-input
                     +col(4)
                         +field
-                            +field-label Nickname
-                            +field-input
+                            +field-label Interface language
+                            +selectbox('english')
                     +col(12)
                         +field.DIV
                             +field-label Avatar
@@ -60,8 +60,8 @@ mixin user-settings2()
                             +field-input
                     +col(4)
                         +field
-                            +field-label Nickname
-                            +field-input
+                            +field-label Interface language
+                            +selectbox('english')
                     +col(12)
                         +field.DIV
                             +field-label Avatar
