--- a/markup/pages/user-settings-user.pug
+++ b/markup/pages/user-settings-user.pug
@@ -1,7 +1,7 @@
 extends ../components/layout-default/layout-default
 include ../components/header/header
 include ../components/footer/footer
-include ../components/user-fill-profile/user-fill-profile
+include ../components/user-settings/user-settings
 include ../components/arrow-up/arrow-up
 include ../components/filter/filter
 include ../components/popup-welcome/popup-welcome
@@ -10,20 +10,16 @@ include ../components/user-nav/user-nav
 
 block header
     +header
-        +user-nav-model(1)
+        +user-nav-user(5)
 
 block content
-    +user-fill-profile(6)
-        +user-fill-profile-6
+    +user-settings
     +arrow-up
 
 block popups
     +popup-welcome
     +filter-extended
     +select-city-popup
-
-block scripts
-    //script(src='%=static=%js/separate-js/ajax/fill-profile/step6.js')
 
 block footer
     +footer
