--- a/markup/components/field/field.styl
+++ b/markup/components/field/field.styl
@@ -40,6 +40,9 @@
         font-size 16px
         font-weight 400
 
+        &_grey
+            color: rgba(#fff, .35)
+
     &__description
         display: block
         margin-top: 20px
