--- a/markup/pages/test.pug
+++ b/markup/pages/test.pug
@@ -32,7 +32,7 @@ block content
         //+container
 
         +demo
-            +demo-link('#profile-video')(data-popup-id='#auth-popup' data-action='show').js-toggle-popup call
+            +demo-link('#profile-video')(data-popup-id='#profile-video' data-action='show').js-toggle-popup call
 
 block scripts
     //+map-scripts
