--- a/markup/components/filter/filter.pug
+++ b/markup/components/filter/filter.pug
@@ -7,6 +7,7 @@ include ../checkbox/checkbox
 include ../accordion/accordion
 include ../rating-interactive/rating-interactive
 include ../field/field
+include ../heading/heading
 
 mixin filter()
     +b.FORM(method='POST' action='#').filter&attributes(attributes)
