--- a/markup/components/profile-video-popup/profile-video-popup.styl
+++ b/markup/components/profile-video-popup/profile-video-popup.styl
@@ -20,7 +20,7 @@
             top: 0
             left: 0
             height: 30%
-            background-image linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5))
+            background-image linear-gradient(to bottom, rgba(0, 0, 0, .5), transparent)
             transform: translate(0, 0)
 
         &-icon
