--- a/markup/pages/test.pug
+++ b/markup/pages/test.pug
@@ -29,7 +29,8 @@ block header
 
 block content
     div(style="height: 2000px; margin-top: 100px; background-color: transparent")
-        //+container
+        +container
+            +recommended-slider
 
         +demo
             +demo-link('#profile-video')(data-popup-id='#profile-video' data-action='show').js-toggle-popup call
