fix profile popup

--- a/markup/components/profile-popup/profile-popup.styl
+++ b/markup/components/profile-popup/profile-popup.styl
@@ -58,14 +58,14 @@
             height: 100%
 
         svg
-            stroke: rgba(#fff, .4)
-            transition(background-color)
+            fill: rgba(#fff, .4)
+            transition(fill)
 
         &:hover
             background-color: rgba(#fff, .08)
 
             svg
-                stroke: #fff
+                fill: #fff
 
         &_prev
             left: 0
