--- a/markup/components/profile-popup/profile-popup.styl
+++ b/markup/components/profile-popup/profile-popup.styl
@@ -50,6 +50,9 @@
         border-radius: 50%
         transition(transform, background-color)
 
+        +below(1300px)
+            display: none
+
         &__icon-container
             display: flex
             justify-content: center
