--- a/markup/components/recommended-slider/recommended-slider.styl
+++ b/markup/components/recommended-slider/recommended-slider.styl
@@ -47,7 +47,12 @@
             left: 50px
 
             svg
-                transform: rotate(180deg)
+                transform: rotate(-90deg)
+                fill: #fff
 
         &_next
             right: 50px
+
+            svg
+                transform: rotate(90deg)
+                fill: #fff
