--- a/markup/components/short-info/short-info.styl
+++ b/markup/components/short-info/short-info.styl
@@ -8,6 +8,10 @@
         text-transform uppercase
         color: #878889
 
+        &_md
+            font-size: 16px
+            text-transform: none
+
     &__content
         display: block
         margin-top: 5px
@@ -18,6 +22,9 @@
         font-size: 16px
         color: darkGreyColor
         text-decoration: none
+
+        &_md
+            font-size: 16px
 
         span
             color: #878889
