--- a/markup/components/search-bar/search-bar.styl
+++ b/markup/components/search-bar/search-bar.styl
@@ -32,7 +32,7 @@
         background-color: transparent
 
     &__icon
-        stroke: darkGreyColor
+        fill: darkGreyColor
 
     &__close
         display: none
