--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -130,7 +130,7 @@
                 color: #fff
 
                 & ^[0]__icon_search
-                    stroke: #fff
+                    fill: #fff
 
     &__arrow
         position: absolute
@@ -146,7 +146,7 @@
         transition(stroke, fill)
 
         &_search
-            stroke: darkGreyColor
+            fill: darkGreyColor
 
     &__heading
         display: block
