--- a/markup/components/profile-photo-popup/profile-photo-popup.pug
+++ b/markup/components/profile-photo-popup/profile-photo-popup.pug
@@ -2,7 +2,7 @@ include ../popup/popup
 include ../image-bg/image-bg
 
 mixin profile-photo-popup()
-    +popup.popup__wrapper_100.popup_no_mobile_paddings#profile-photo
+    +popup.popup_wrapper_100.popup_no_mobile_paddings#profile-photo
         +b.profile-photo-popup&attributes(attributes)
             +e.gallery.swiper-container
                 +e.UL.gallery-items.swiper-wrapper
