--- a/markup/components/rating/rating.styl
+++ b/markup/components/rating/rating.styl
@@ -64,6 +64,7 @@
         width: 100%
         background-color: darkGreyColor
         transition(opacity)
+        z-index: 10
 
         &::before
             triangle(darkGreyColor, up)
