--- a/markup/components/user-profile/user-profile.pug
+++ b/markup/components/user-profile/user-profile.pug
@@ -43,12 +43,12 @@ mixin user-profile(isPopup)
                             +model-info
                         +e.row
                             +profile-contacts
-                        +e.row._agencies
+                        +e.row._agencies._mob_padding
                             +heading Agencies
                             +agency-card-new
-                        +e.row
+                        +e.row._mob_padding
                             +share
-                        +e.row
+                        +e.row._mob_padding
                             +grid
                                 +col(4)
                                     +button()(data-popup-id='#profile-report' data-action='show')._uppercase._border_standart.js-toggle-popup Report
