--- a/markup/components/rating-interactive/rating-interactive.styl
+++ b/markup/components/rating-interactive/rating-interactive.styl
@@ -52,6 +52,7 @@
 
         +below(768px)
             width 52px
+            height: 52px
 
         &.active
             background-color: darkGreyColor
