--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -47,7 +47,10 @@ block content
             +demo-link('registration.html') 05/Registration_(2,1, 2,2)
             +demo-link('phone-number.html') 05/Registration_3,2
             +demo-link('registration-success.html') 05/Registration_3,4
-            +demo-link('user-profile.html') 06/My_Profile
+            +demo-link('user-profile-feedbacks.html') 06/My_Profile
+            +demo-link('user-profile-rate.html') 06/My_Profile
+            +demo-link('user-profile-no-reviews.html') 06/My_Profile
+            +demo-link('user-profile-rate-no-login.html') 06/My_Profile
             +demo-link('user-fill-profile.html') 06/Reg_p2_1 (ajax)
             +demo-link('user-fill-profile2.html') 06/Reg_p2_2 (static)
             +demo-link('user-fill-profile3.html') 06/Reg_p2_3 (static)
@@ -77,8 +80,8 @@ block popups
     +auth-popup
 
 block scripts
-    +map-scripts
     script(src='%=static=%js/separate-js/maps/profile-contacts.js')
+    +map-scripts
 
 block footer
     +footer
