--- a/markup/components/selectbox/selectbox.styl
+++ b/markup/components/selectbox/selectbox.styl
@@ -51,6 +51,7 @@
         position: absolute
         bottom: 7px
         right: 7px
+        fill: mainColor
 
     &__control
         display: none
